--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -282,7 +282,297 @@
         </div>
     </section>
     <section class="pricing-plan">
-        asdasdasd
+        <div class="container">
+            <p class="title">
+                Pricing plan
+            </p>
+            <p class="subtitle">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+            <div class="pricing-row">
+                <div class="pricing-row__card">
+                    <div id="rectangle"></div>
+                    <div id="triangle-topleft"></div>
+                    <div class="name">
+                        free trail
+                    </div>
+                    <div class="price">
+                        <sup>$</sup>00 <span>per month</span>
+                    </div>
+                    <p class="card__description">
+                        30 free trail
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        5 free projects
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        PHP 5 enabled
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        24/7 supports
+                    </p>
+                    <hr>
+                    <button class="price__btn">
+                        order now
+                    </button>
+                </div>
+                <div class="pricing-row__card">
+                    <div id="rectangle"></div>
+                    <div id="triangle-topleft"></div>
+                    <div class="name">
+                        basic
+                    </div>
+                    <div class="price">
+                        <sup>$</sup>50 <span>per month</span>
+                    </div>
+                    <p class="card__description">
+                        30 free trail
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        5 free projects
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        PHP 5 enabled
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        24/7 supports
+                    </p>
+                    <hr>
+                    <button class="price__btn">
+                        order now
+                    </button>
+                </div>
+                <div class="pricing-row__card">
+                    <div id="rectangle"></div>
+                    <div id="triangle-topleft"></div>
+                    <div class="name">
+                        ultimates
+                    </div>
+                    <div class="price">
+                        <sup>$</sup>99 <span>per month</span>
+                    </div>
+                    <p class="card__description">
+                        30 free trail
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        5 free projects
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        PHP 5 enabled
+                    </p>
+                    <hr>
+                    <p class="card__description">
+                        24/7 supports
+                    </p>
+                    <hr>
+                    <button class="price__btn">
+                        order now
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="container">
+            <p class="title">
+                our team member
+            </p>
+            <p class="subtitle">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+            <div class="team__row">
+                <div class="team__card">
+                    <img src="img/John.png" alt="John">
+                    <p class="team__name">
+                        John Doe
+                    </p>
+                    <p class="team__post">
+                        general manager
+                    </p>
+                    <div class="team__icons">
+                        <a href="#" class="team__icons-link">
+                            <div class="facebook link__ico">
+                                <i class="fa-brands fa-facebook-f fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="twitter link__ico">
+                                <i class="fa-brands fa-twitter fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="message link__ico">
+                                <i class="fa-solid fa-comments fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="dribble link__ico">
+                                <i class="fa-brands fa-dribbble fa-xl"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="team__card">
+                    <img src="img/Alexa.png" alt="John">
+                    <p class="team__name">
+                        alexa biru
+                    </p>
+                    <p class="team__post">
+                        office director
+                    </p>
+                    <div class="team__icons">
+                        <a href="#" class="team__icons-link">
+                            <div class="facebook link__ico">
+                                <i class="fa-brands fa-facebook-f fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="twitter link__ico">
+                                <i class="fa-brands fa-twitter fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="message link__ico">
+                                <i class="fa-solid fa-comments fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="dribble link__ico">
+                                <i class="fa-brands fa-dribbble fa-xl"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="team__card">
+                    <img src="img/Ronobir.png" alt="John">
+                    <p class="team__name">
+                        ronobir sing
+                    </p>
+                    <p class="team__post">
+                        admin
+                    </p>
+                    <div class="team__icons">
+                        <a href="#" class="team__icons-link">
+                            <div class="facebook link__ico">
+                                <i class="fa-brands fa-facebook-f fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="twitter link__ico">
+                                <i class="fa-brands fa-twitter fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="message link__ico">
+                                <i class="fa-solid fa-comments fa-xl"></i>
+                            </div>
+                        </a>
+                        <a href="#" class="team__icons-link">
+                            <div class="dribble link__ico">
+                                <i class="fa-brands fa-dribbble fa-xl"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="team__circles">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+    </section>
+    <section class="blogg">
+        <div class="container">
+            <p class="title">
+                Blog
+            </p>
+            <p class="subtitle">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+            <div class="blog__row">
+                <div class="row__left">
+                    <img src="img/SEO.png" alt="SEO">
+                </div>
+                <div class="row__right">
+                    <p class="row__title">
+                        <a href="#">SEO quis vestibulum</a>
+                    </p>
+                    <div class="row__date-category">
+                        <i class="fa-regular fa-calendar-days fa-lg"></i>
+                        <p class="date">
+                            14.07.2017
+                        </p>
+                        <i class="fa-regular fa-file fa-lg"></i>
+                        <p class="category">
+                            Development
+                        </p>
+                    </div>
+                    <p class="row__info">
+                        Dolore magna aliqua. Ut enim ad minim veniam, quis nos-<br>trud exercitation ullamco laboris nisi ut aliquip ex ea com-<br>modo consequat...
+                    </p>
+                </div>
+            </div>
+            <div class="blog__row">
+                <div class="row__left second-row">
+                    <p class="row__title">
+                        <a href="#">SEO quis vestibulum</a>
+                    </p>
+                    <div class="row__date-category">
+                        <i class="fa-regular fa-calendar-days fa-lg"></i>
+                        <p class="date">
+                            14.07.2017
+                        </p>
+                        <i class="fa-regular fa-file fa-lg"></i>
+                        <p class="category">
+                            Development
+                        </p>
+                    </div>
+                    <p class="row__info">
+                        Dolore magna aliqua. Ut enim ad minim veniam, quis<br>nostrud exercitation ullamco laboris nisi ut aliquip ex ea<br>commodo consequat...
+                    </p>
+                </div>
+                <div class="row__right">
+                    <img src="img/apple.png" alt="Apple">
+                </div>
+            </div>
+            <div class="blog__row">
+                <div class="row__left">
+                    <img src="img/ipad.png" alt="IPad">
+                </div>
+                <div class="row__right">
+                    <p class="row__title">
+                        <a href="#">SEO quis vestibulum</a>
+                    </p>
+                    <div class="row__date-category">
+                        <i class="fa-regular fa-calendar-days fa-lg"></i>
+                        <p class="date">
+                            14.07.2017
+                        </p>
+                        <i class="fa-regular fa-file fa-lg"></i>
+                        <p class="category">
+                            Development
+                        </p>
+                    </div>
+                    <p class="row__info">
+                        Dolore magna aliqua. Ut enim ad minim veniam, quis nos-<br>trud exercitation ullamco laboris nisi ut aliquip ex ea com-<br>modo consequat...
+                    </p>
+                </div>
+            </div>
+            <div class="blog__button">
+                <button class="blogg__btn">
+                    more view
+                </button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
