--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -574,5 +574,58 @@
             </div>
         </div>
     </section>
+    <section class="contact_us">
+        <div class="container">
+            <p class="title">
+                contact us
+            </p>
+            <p class="subtitle">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+            <div class="contacts">
+                <div class="col">
+                    <div class="col__ico">
+                        <img src="img/placeholder.png" alt="Placeholder">
+                    </div>
+                    <p class="col__text">
+                        Nobinagar savar,Dhaka<br>Bangladesh
+                    </p>
+                </div>
+                <div class="col">
+                    <div class="col__ico">
+                        <img src="img/phone-call.png" alt="Placeholder">
+                    </div>
+                    <p class="col__text">
+                        +8801743331996<br>+8801928737807
+                    </p>
+                </div>
+                <div class="col">
+                    <div class="col__ico">
+                        <img src="img/mail.png" alt="Placeholder">
+                    </div>
+                    <p class="col__text">
+                        quickmasud@gmail.com<br>quickmasud@yahoo.com
+                    </p>
+                </div>
+            </div>
+            <form action="">
+                <div class="contacts__form">
+                    <div class="form__name-email">
+                        <input type="text" class="form__name" placeholder="Your NAME" required>
+                        <input type="email" class="form__email" placeholder="Your Email" required>
+                    </div>
+                    <textarea name="message" id="form__message" rows="10" placeholder="Write Message">
+
+                    </textarea>
+                    <button class="form__button">
+                        send
+                    </button>
+                </div>
+            </form>
+        </div>
+    </section>
+    <footer>
+        All rights Reserved © 2017
+    </footer>
 </body>
 </html>
